# gate-bootstrap

./: .gitmodules  CMakeLists.txt  Cargo.toml  README.md
.github/workflows/: cmake.yml
docs/: README.md
docs/examples/greeter/: entry.gate
docs/examples/hello_world/: README.md  entry.gate
src/: base.h  main.c  main.rs
src/common/: linked_list.c  linked_list.h  list_tree.c  list_tree.h
src/ui/: args.c  args.h
src/util/: args.c  args.h  fs.rs
tests/: CMakeLists.txt  base.h
tests/common/: linked_list.test.c  list_tree.test.c
